--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@ search_exclude: true
 image: images/logo.png
 ---
 
+# intro
+
+![]({{site.baseurl}}/images/index_test.png "https://github.com/hyay/testcolabblog")
+
+안녕하세요. 테스트 페이지 입니다.
+* 하나
+* 둘
+* 셋
+
+------
 This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
 ![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
