deploy: a18ca9e541f2efe5c2594bf13f5998e525f9c641

--- a/index.html
+++ b/index.html
@@ -71,7 +71,19 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><h1 id="intro">intro</h1>
+
+<p><img src="/testcolabblog/images/index_test.png" alt="" title="https://github.com/hyay/testcolabblog" /></p>
+
+<p>안녕하세요. 테스트 페이지 입니다.</p>
+<ul>
+  <li>하나</li>
+  <li>둘</li>
+  <li>셋</li>
+</ul>
+
+<hr />
+<p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
 
 <p><img src="/testcolabblog/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
 
