--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@ window.onload = wrap_img;
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home"><p><a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fhyay.github.io%2Ftestcolabblog%2F&amp;count_bg=%23763262&amp;title_bg=%231622B4&amp;icon=apple.svg&amp;icon_color=%23E7E7E7&amp;title=hits&amp;edge_flat=false" alt="Hits" /></a></p>
+
+<p><img src="https://ghchart.rshah.org/paullabkorea" alt="잔디" title="https://github.com/testcolabblog" /></p>
+
 <h1 id="intro">intro</h1>
 
 <p><img src="/testcolabblog/images/index_test.png" alt="" title="https://github.com/hyay/testcolabblog" /></p>
