--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ image: images/logo.png
 ---
 [![Hits](https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fhyay.github.io%2Ftestcolabblog%2F&count_bg=%23763262&title_bg=%231622B4&icon=apple.svg&icon_color=%23E7E7E7&title=hits&edge_flat=false)](https://hits.seeyoufarm.com)
 
-![잔디](https://ghchart.rshah.org/paullabkorea "https://github.com/testcolabblog")
+![잔디](https://ghchart.rshah.org/hyay "https://github.com/testcolabblog")
 
 # intro
 
-![]({{site.baseurl}}/images/index_test.png "https://github.com/hyay/testcolabblog")
+![]({{site.baseurl}}/images/index_test.png "https://github.com/hyay")
 
 안녕하세요. 테스트 페이지 입니다.
 * 하나
